Basic things (Config, Webhooks)

--- a/package.json
+++ b/package.json
@@ -29,18 +29,24 @@
   "jest": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
-      "/node_modules/"
+      "/node_modules/",
+      "/test/"
     ]
   },
   "engines": {
     "node": ">= 8.x.x"
   },
   "dependencies": {
+    "fastest-validator": "^0.6.17",
     "stripe": "^7.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.15",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
+    "moleculer-web": "^0.8.5",
     "eslint-plugin-jest": "^22.4.1",
     "jest": "^24.7.1",
     "jest-cli": "^24.7.1",
