--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YourSoftRun/moleculer-stripe.git"
+    "url": "git+https://github.com/LuxChanLu/moleculer-stripe.git"
   },
   "keywords": [
     "moleculer",
     "stripe"
   ],
-  "author": "Hugo Meyronneinc <hugo@yoursoft.run>",
+  "author": "Hugo Meyronneinc <hugo@lxc.lu>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/YourSoftRun/moleculer-stripe/issues"
+    "url": "https://github.com/LuxChanLu/moleculer-stripe/issues"
   },
-  "homepage": "https://github.com/YourSoftRun/moleculer-stripe#readme",
+  "homepage": "https://github.com/LuxChanLu/moleculer-stripe#readme",
   "jest": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
@@ -35,27 +35,26 @@
     ]
   },
   "engines": {
-    "node": ">= 8.x.x"
+    "node": ">= 12.x.x"
   },
   "dependencies": {
-    "decamelize": "^3.2.0",
+    "decamelize": "^5.0.0",
     "deepmerge": "^4.2.2",
-    "fastest-validator": "^0.6.19",
+    "fastest-validator": "^1.12.0",
     "pluralize": "^8.0.0",
-    "stripe": "^7.14.0",
-    "uuid": "^3.3.3"
+    "stripe": "^8.213.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
+    "@types/jest": "^27.4.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
-    "coveralls": "^3.0.9",
-    "eslint": "^6.7.2",
-    "moleculer-repl": "^0.6.1",
-    "moleculer-web": "^0.8.5",
-    "eslint-plugin-jest": "^23.1.1",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "moleculer": "^0.13.11"
+    "eslint": "^8.12.0",
+    "moleculer-repl": "^0.7.0",
+    "moleculer-web": "^0.10.4",
+    "eslint-plugin-jest": "^26.1.3",
+    "jest": "^27.5.1",
+    "jest-cli": "^27.5.1",
+    "moleculer": "^0.14.19"
   }
 }
