--- a/package.json
+++ b/package.json
@@ -38,23 +38,23 @@
     "node": ">= 12.x.x"
   },
   "dependencies": {
-    "decamelize": "^5.0.0",
+    "change-case": "^4.1.2",
     "deepmerge": "^4.2.2",
-    "fastest-validator": "^1.12.0",
+    "fastest-validator": "^1.16.0",
     "pluralize": "^8.0.0",
-    "stripe": "^8.213.0",
-    "uuid": "^8.3.2"
+    "stripe": "^11.5.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.2.4",
+    "eslint": "^8.30.0",
+    "eslint-plugin-jest": "^27.1.7",
+    "jest": "^29.3.1",
+    "jest-cli": "^29.3.1",
+    "moleculer": "^0.14.27",
+    "moleculer-repl": "^0.7.3",
+    "moleculer-web": "^0.10.5",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.8",
-    "eslint": "^8.12.0",
-    "moleculer-repl": "^0.7.0",
-    "moleculer-web": "^0.10.4",
-    "eslint-plugin-jest": "^26.1.3",
-    "jest": "^27.5.1",
-    "jest-cli": "^27.5.1",
-    "moleculer": "^0.14.19"
+    "request-promise-native": "^1.0.8"
   }
 }
